--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://js.stripe.com/v3/"></script>
     <title>React App</title>
   </head>
   <body>
